# shiping

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  prompt.md  requirements.txt
backend/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py  version.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limiter.py  security.py
backend/app/migrations/: README.md
backend/app/migrations/versions/: 001_initial_schema.py
backend/app/models/: maritime.py
backend/app/scripts/: db-setup.py  health-check.py  performance-benchmark.py  start-dev.py  start-prod.py
backend/app/services/: __init__.py  analytics_engine.py  pathfinding_engine.py  port_intelligence.py  route_planner.py
backend/app/tests/: conftest.py
backend/app/tests/fixtures/: ports.json
backend/app/tests/integration/: test_api_routes.py
backend/app/tests/performance/: test_route_performance.py
backend/app/tests/unit/: test_calculations.py  test_models.py
backend/app/utils/: __init__.py  maritime_calculations.py  performance.py
backend/app/workers/: __init__.py  data_updater.py  route_calculator.py
database/: init.sql
docs/: README.md
docs/api/: analytics-api.md  ports-api.md  (+4 more)
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
(+70 files in other folders)
